# privault

./: .flake8  .gitignore  LICENSE  README.md  devto-post.md  prd.json  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-04-privault-design.md
src/privault/: __init__.py  audit.py  cli.py  clipboard.py  crypto.py  models.py  storage.py  vault.py
tests/: conftest.py  test_audit.py  test_cli.py  test_clipboard.py  test_crypto.py  test_models.py  test_network_isolation.py  test_storage.py  test_vault.py
